[package]
name = "morph-test"
version = "0.2.0"
edition = "2021"
[lib]
name = "morph_test"
path = "src/lib.rs"
[[bin]]
name = "morph-test"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
colored = "2.1"
wait-timeout = "0.2"
which = "6.0"
[dev-dependencies]
tempfile = "3.10"
