[package]
name = "morph-test2"
version = "0.4.0"
edition = "2024"

[lib]
name = "morph_test2"
path = "src/lib.rs"

[[bin]]
name = "morph-test2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
colored = "3"
wait-timeout = "0.2"
which = "8.0"
indexmap = { version = "2.0", features = ["serde"] }
mimalloc = { version = "0.1.47", optional = true }
tokio = { version = "1", features = ["full"] }
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
futures = "0.3"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.20"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
